Formatting (#12)
* java formatter + run on save

* format all backend java files

* move formatter settings